# arduino-esp32-tft-terminal

./: .gitignore  CEREMONIES.md  CHANGES.md  CLAUDE.md  Makefile  README-animations.md  README-protocol.md  README.md  TODO.md  client-test.py  config.py  oled-client.py
app/: __init__.py  asteriods.py  bumps.py  collision.py  collisions.py  collisions2.py  collisions3.py  collisions4.py  collisions_2.py  cube.py  fill.py  monitor.py  monitor_cpus.py  monitor_graph.py  monitor_host.py  quix.py  road.py  starfield.py  thats_all.py  tunnel.py
case-esp32s3-rtft/: README.md  esp32s3-rtft-case.scad
client-py/: CHANGES.md  Makefile  README.md  claude-mon.py  claude_busy_monitor.py  config.py  load.sh  pyproject.toml  requirements.txt  run.py
client-py/app/: __init__.py  asteriods.py  bumps.py  claude_mon.py  collisions.py  collisions2.py  collisions3.py  collisions4.py  cube.py  fill.py  monitor_cpus.py  monitor_graph.py  monitor_host.py  quix.py  road.py  starfield.py  tunnel.py
client-py/lib/: __init__.py  args.py  board.py  channel.py  command.py  gfx.py
client-py/src/arduino_esp32_tft_terminal/: __init__.py  __main__.py  buffer_safety.py  cli.py  config.py  selftest.py
client-py/src/arduino_esp32_tft_terminal/app/: __init__.py  asteriods.py  bumps.py  claude_mon.py  collisions.py  collisions2.py  collisions3.py  collisions4.py  cube.py  fill.py  monitor_cpus.py  monitor_graph.py  monitor_host.py  quix.py  road.py  starfield.py  thats_all.py  tunnel.py
client-py/src/arduino_esp32_tft_terminal/lib/: args.py  board.py  channel.py  command.py  command_executor.py  command_line_autogen.py  gfx.py  protocol_commands_autogen.py  protocol_raw.py
client-py/tests/: conftest.py
client-py/tests/snapshot/: test_apps.py
client-py/tests/snapshot/golden/: cube.txt  fill.txt  starfield.txt  tunnel.txt
client-py/tests/unit/: test_args.py  test_buttons.py  test_command_line.py  test_gfx_color.py  test_helpers.py  test_monitor_parse.py  test_physics.py  test_print_slicing.py  test_protocol.py
devlog/: 0007-hygiene.md  0009-ruff.md  0011-readme.md  0013-changes.md  0015-subproject-readmes.md  0017-packaging.md  0019-test-strategy.md  0021-tests.md  0024-firmware-test-study.md  0026-selftest.md  (+14 more)
protocol/: Makefile  protocol.yaml  pyproject.toml
protocol/src/tft_protocol/: __main__.py  generate.py  load.py  schema.py
protocol/src/tft_protocol/templates/: client_commands.py.jinja  client_raw.py.jinja  command_line.py.jinja
protocol/tests/: test_goldens.py
protocol/tests/fixtures/: sample_protocol.yaml
protocol/tests/golden/: command_dispatch.inc  command_line.py  doc.md  protocol_handlers.h  replay_dispatch.inc
(+47 files in other folders)
